
opp_(n)makemake: dropped -N option, and made dynamic NED loading the default
opp_(n)makemake: default is linking with BOTH cmdenv and tkenv -- use -u runtime option to choose
opp_makedep: --objdir option changed to --objprefix (also available as -P)

opp_makemake option changes:
-b,--basedir ==> -P,--projectdir
old -P option (opp_msgc windows export/import symbol) became -p
added --nmake

2006-10-21  ------ omnetpp-3.3 released ------

2006-10-19  Andras Varga

	* opp_nmakemake: bugfix: running it with a -I"path with space" option,
	the quotes didn't make it into the generated Makefile.vc

2006-01-12  ------ omnetpp-3.2p1 released ------

2006-01-09  Andras Varga

	* opp_nmakemake: failed if a directory name contained "++" when the -b
	option was specified

	* opp_makedep: return exit code 0 when called without args to print help

2005-10-19  ------ omnetpp-3.2 released ------

2005-10-13  Andras Varga

	* opp_makemake, opp_nmakemake: fix: internal abs2rel routine didn't 
	work for 1-char directory names

2005-09-22  Andras Varga

	* opp_neddoc.in: changed to use @@listfile syntax to invoke nedtool.

2005-08-06  Andras Varga

	* opp_nmakemake: implemented -s, -t, -d options to enable building DLLs

	* opp_makemake.in: added -t, -d options (do-nothing options) for 
	command-line compatibility with opp_nmakemake

2005-08-05  Andras Varga

	* opp_makemake.in, opp_nmakemake: added -P option (just gets passed 
	to opp_msgc)

2005-07-19  Andras Varga

	* opp_neddoc.in: changed runprog so that it gives system() a single
	string. This is necessary because we need to use the shell because
	of redirections. As documented at http://perldoc.perl.org/functions/
	system.html, perl uses the shell to execute a program if there is 
	only one scalar parameter and this must contain a shell metacharacter.
	[reported by Johann Glaser]

	* opp_neddoc.in: changed network images (GNED diagrams) from JPG
	to PNG. (It was JPG because a browser beginning with "I" used to have