@@ -1,8 +1,4 @@
-eval '(exit $?0)' && eval 'exec perl -S $0 ${1+"$@"}' && eval 'exec perl -S $0 $argv:q'
-  if 0;
-
-#!perl -w
-#line 6
+#!/usr/bin/perl
 #
 # opp_msgc: supports message subclassing: compiles NED files with message
 # declarations into C++ code.
