@@ -1,8 +1,4 @@
-eval '(exit $?0)' && eval 'exec perl -S $0 ${1+"$@"}' && eval 'exec perl -S $0 $argv:q'
-  if 0;
-
-#!perl
-#line 6
+#!/usr/bin/perl
 #
 # opp_test: regression testing tool for OMNeT++/OMNEST
 #
